syntax = "proto3";
option go_package="./analyticspb;analyticspb";
package analyticsproto;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

// Analytics - сервис аналитики
service Analytics {
    rpc SendResult(ResultRq) returns (google.protobuf.Empty) {}
    rpc SendTimestamp(TimestampRq) returns (google.protobuf.Empty) {}
}

// ResultRq запрос для отправки данных о результате задачи
message ResultRq {
    string taskid = 1;
    bool result = 2;
}

// TimestampRq запрос для отправки события и временной метки 
message TimestampRq {
    string taskid  = 1;
    string approver = 2;
    string eventtype = 3;
    google.protobuf.Timestamp starttime = 4;
    google.protobuf.Timestamp endtime = 5;
}
